New-Upload-1755854042013/objects/Permission_Set__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_License__c</fullName>
        <label>User License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Permission Set</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Permission Set Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permission Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>